# Space-Killer

./: .dockerignore  .env.example  .gitignore  .gitignore.example  Dockerfile  README.md  README.rst  alembic.ini  docker-compose.yaml  k6lt.js  load_test.js  pyproject.toml  tasks.txt  tasks4d_future
.devcontainer/: devcontainer.json
.github/: dependabot.yml
alembic/: env.py
alembic/versions/: 2026_01_21_2233-a7549b2c335e_initial_commit_added_users_and_user_.py  2026_02_10_1949-aed9ca9f645f_rename_full_name_to_name.py  2026_02_22_2357-bf27ad6a950c_initial_migration.py
app/: coords.py  main.py
app/api/auth/: __init__.py  auth_logout.py  auth_service.py
app/api/auth/common/: __init__.py  adapters.py  dependency.py  login.py  logout.py  mappers.py  schemas.py  service.py
app/api/auth/github/: __init__.py  client.py  router.py  scheme.py  service.py  utils.py
app/api/auth/github_oauth2/: __init__.py  client.py  router.py  service.py
app/api/auth/google/: __init__.py  client.py  router.py  service.py
app/api/auth/google_oauth2/: __init__.py  client.py  router.py  service.py
app/api/auth/stackoverflow/: __init__.py  client.py  router.py  service.py  utils.py
app/api/auth/telegram/: __init__.py  router.py  service.py
app/api/auth/yandex/: __init__.py  client.py  router.py  service.py
app/core/: __init__.py  dependencies.py  docs.py  env_conf.py  exceptions.py  lifespan.py  serializer.py  session.py  templates_conf.py
app/core/db/: __init__.py  base.py  database.py  models.py
app/frontend/: __init__.py  homepage.py  welcome.py
app/infra/: __init__.py  dependencies.py  redis_conf.py
app/infra/alembic/: env.py
app/infra/alembic/versions/: 2026_03_11_2013-8ff5079fce47_.py
app/infra/db/: models.py
app/infra/http/: __init__.py  service.py
app/infra/postgres/: __init__.py  base.py  database.py  models.py  service.py
app/infra/redis/: __init__.py  limiter.py  service.py  store.py
app/ui/: __init__.py  router.py
app/utils/: __init__.py  log_helpers.py  logger_conf.py
deploy/alembic/: alembic.ini
deploy/angie/: angie.conf
deploy/angie/conf.d/: media.conf  server.conf
deploy/angie/snippets/: api_cache.conf  brotli.conf  error_page.conf  optimization.conf  proxy_params.conf  rate_limiting.conf  security.conf
deploy/app/: Dockerfile
deploy/centrifugo/: centrifugo.json
deploy/geo/: Dockerfile
deploy/nats/: nats.conf
deploy/nginx/: nginx.conf
deploy/nginx/conf.d/: server.conf  upstreams.conf
deploy/nginx/snippets/: error_page.conf  gzip.conf  optimization.conf  proxy_params.conf  rate_limiting.conf  security.conf
deploy/postgres/: postgres.conf
deploy/redis/: redis.conf  redis_app.conf  redis_geo.conf
deploy/scylla/: housekeeping.cfg  io_properties.yaml  scylla.yaml
deploy/seaweed/: s3.json
docs/: databases_architecture.md  mono_to_micros.md
frontend/src/: App.jsx
src/: health.py  healthz.py  main.py
src/core/: base.py  dependencies.py  env_conf.py  exceptions.py  lifespan.py  lifespan_helpers.py
src/infra/: auth_http_client.py  centrifugo.py  redis.py  seaweed.py  serializer.py  session_store.py
src/infra/nats/: core_manager.py  manager.py
src/infra/persistence/: postgres.py
src/infra/persistence/alembic/: commands.MD  env.py
src/infra/persistence/alembic/versions/: 2026_04_26_1741-d839835af133_.py  2026_05_17_2018-4e9897b69762_initial_revision.py  2026_05_22_2342-6ba5ba131f5c_initial.py  2026_05_30_2232-bf6a10273742_initial.py  2026_06_01_1451-993bf46ac04b_initial.py  2026_06_01_1502-cca9a6397e26_initial.py  2026_06_27_2040-2013c44ed2f6_initial.py
src/infra/persistence/models/: __init__.py  mixins.py  models.py  profiles.py  subscriptions.py  user_identities.py  users.py  users_and_identities.py
src/infra/scylla/: manager.py
src/infra/scylla/migrations/: 000001_init_content_service.down.cql  000001_init_content_service.up.cql
src/modules/: __init__.py
src/modules/auth/: __init__.py
src/modules/auth/common/: __init__.py  login.py  logout.py  mappers.py  postgres_repo.py
src/modules/auth/entrypoints/: __init__.py  github.py  google.py  stackoverflow.py  telegram.py  yandex.py
src/modules/auth/third_party_apps/github/: __init__.py  callback_handler.py  kwargs.py
src/modules/auth/third_party_apps/google/: __init__.py  callback_handler.py  oauth_app.py
src/modules/auth/third_party_apps/stackoverflow/: __init__.py  callback_handler.py  callback_helpers.py
src/modules/auth/third_party_apps/telegram/: __init__.py  callback_handler.py
src/modules/auth/third_party_apps/yandex/: __init__.py  callback_handler.py  oauth_app.py
src/modules/feed/: __init__.py
src/modules/feed/entrypoints/: __init__.py  get_global.py
src/modules/geo/: base_satellite.py  coords.py  local_tles.py  satellite_manager.py  update_tle.py  worker.py
src/modules/geo/satellites/: hst.py  hubble.py  iss.py
src/modules/profile/entrypoints/: get_user_profile.py
src/modules/profile/handlers/get/: pg_user_meta.py  user_profile.py
src/modules/profile/infra/get/: user_profile_repo.py
src/ui/: __init__.py  entrypoint.py  templates_conf.py
src/utils/: __init__.py  log_helpers.py
templates/: base.html  feed.html  home.html  index.html  map.html  profile.html  welcome.html
templates/fragments/: profile_edit_form.html  profile_view.html
tests/load/: k6lt.js
