[project]
name = "smth-p"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "authlib>=1.6.6",
    "fastapi[standard]>=0.128.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "orjson>=3.11.5",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy[asyncio]>=2.0.45",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.40.0",
]
